--- a/MarioClub/styles.css
+++ b/MarioClub/styles.css
@@ -20,3 +20,9 @@ header h1{
     display: inline-block;
     border-radius: 36px;
 }
+.banner{
+    position: relative;
+}
+.banner img{
+    max-width: 100%;
+}
