--- a/MarioClub/styles.css
+++ b/MarioClub/styles.css
@@ -38,7 +38,7 @@ header h1{
     padding: 30px;
     position: absolute;
     left: 0px;
-    top: 20%;
+    top: 10%;
 }
 
 .banner h2{
@@ -148,9 +148,9 @@ form input:valid{
     border : 4px solid rgb(47, 240, 47)   
 }
 
-nav li:first-child{
+/* nav li:first-child{
     border: 3px solid #f63232
-}
+} */
 
 article p::first-line{
     font-weight: bold;
@@ -165,4 +165,54 @@ p::selection{
 }
 p::after{
     content: "..."
+}
+@media screen and (max-width: 1400px) {
+    .banner .welcome h2{
+       font-size: 60px;
+    }
+     nav li{
+         font-size: 18px ;
+     }
+}
+@media screen and (max-width: 960px) {
+    .banner .welcome h2{
+       font-size: 40px;
+    }
+     nav li{
+         font-size: 16px ;
+     }
+}
+@media screen and (max-width: 700px) {
+    .banner .welcome{
+        position: static;
+        text-align: center;
+        padding: 10px;
+    }
+    .banner .welcome br{
+        display: none;
+    }
+    .banner .welcome h2{
+        font-size: 25px;
+    }
+    .banner .welcome span{
+        font-size: 1em;
+    }
+    .images li{
+        width:100%;
+        margin: 20px auto;
+        display: block;
+    }
+}
+@media screen and (max-width: 560px) {
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%margon: 12px;
+    }
+    header{
+        position: relative;
+    }
+    nav{
+        top:0;
+    }
 }
